tests/negative/gold/toitdoc_test.gold
tests/negative/toitdoc_test.toit:17:1: warning: Unterminated code section
```
^
tests/negative/toitdoc_test.toit:23:5: warning: Expected identifier or operator as toitdoc target
  $(32 )
    ^~
tests/negative/toitdoc_test.toit:24:10: warning: Missing parameter name
  $(id --)
         ^
tests/negative/toitdoc_test.toit:25:11: warning: Can't have space between '--' and the parameter name
  $(id -- x)
          ^
tests/negative/toitdoc_test.toit:26:12: warning: Can't have space between '--' and the parameter name
  $(id [-- x])
           ^
tests/negative/toitdoc_test.toit:27:10: warning: Missing parameter name
  $(id --[foo])
         ^
tests/negative/toitdoc_test.toit:28:4: warning: Incomplete toitdoc reference
  $(
   ^
tests/negative/toitdoc_test.toit:33:1: warning: Incomplete string
"foo
^
tests/negative/toitdoc_test.toit:39:1: warning: Incomplete `code` segment
`foo
^
tests/negative/toitdoc_test.toit:49:3: warning: Expected identifier or operator as toitdoc target
$(for)
  ^~~
tests/negative/toitdoc_test.toit:63:5: warning: Missing parameter name or closing ')'
$(A.foo
    ^
tests/negative/toitdoc_test.toit:68:9: warning: Missing parameter name or closing ')'
$(A.foo x
        ^
tests/negative/toitdoc_test.toit:73:9: warning: Missing parameter name or closing ')'
$(A.bar x
        ^
tests/negative/toitdoc_test.toit:10:1: warning: Incomplete string
"incomplete string
^~~~~~~~~~~~~~~~~~
tests/negative/toitdoc_test.toit:12:1: warning: Incomplete `code` segment
`incomplete code
^~~~~~~~~~~~~~~~
tests/negative/toitdoc_test.toit:60:3: error: Redefinition of 'bar'
  bar:
  ^~~
tests/negative/toitdoc_test.toit:59:3: note: First definition of 'bar'
  bar:
  ^~~
tests/negative/toitdoc_test.toit:63:3: warning: Can't resolve reference 'foo' with the given shape
$(A.foo
  ^~~~~
tests/negative/toitdoc_test.toit:73:3: warning: Can't resolve reference 'bar' with the given shape
$(A.bar x
  ^~~~~
tests/negative/toitdoc_test.toit:45:3: warning: Can't resolve reference 'foo' with the given shape
$(A.foo)
  ^~~~~
tests/negative/toitdoc_test.toit:47:3: warning: Ambiguous resolution of reference 'foo'
$(amb.foo)
  ^~~~~~~
tests/negative/ambiguous_a.toit:5:1: warning: Resolution candidate for 'foo'
foo:
^~~
tests/negative/ambiguous_b.toit:5:1: warning: Resolution candidate for 'foo'
foo:
^~~
tests/negative/toitdoc_test.toit:48:2: warning: Can't reference prefix 'amb'
$amb
 ^~~
tests/negative/toitdoc_test.toit:50:3: warning: Can't reference prefix 'amb'
$(amb)
  ^~~
tests/negative/toitdoc_test.toit:52:2: warning: Can't resolve reference 'foo' with the given shape
$foo=
 ^~~
tests/negative/toitdoc_test.toit:53:3: warning: Can't resolve reference 'foo' with the given shape
$(foo x y z)
  ^~~
tests/negative/toitdoc_test.toit:54:3: warning: A setter must take exactly one argument
$(foo=)
  ^~~
tests/negative/toitdoc_test.toit:54:3: warning: Can't resolve reference 'foo' with the given shape
$(foo=)
  ^~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/toitdoc_test.toit'
Compilation failed.
